# my_web_app

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  справочник.md
alembic/: env.py  script.py.mako
alembic/versions/: 2025_10_22__18_54__initial_migration__2e431a128409.py  add_query_history__f91655e89ef9__2025_06_10__18_04.py  initial_migration__259dfa3eb02a__2024_05_23__17_13.py  initial_migration__2cdc75da7730__2025_01_03__18_16.py  initial_migration__480332cc8597__2024_06_10__21_06.py  initial_migration__69390df622cb__2024_05_07__17_51.py  initial_migration__6a17ce74aeaa__2024_05_07__13_27.py  initial_migration__7fa7ba90459c__2024_09_02__18_15.py  initial_migration__842016517b74__2025_07_30__12_14.py  initial_migration__9459e3be9c6a__2025_07_31__17_57.py  initial_migration__d239cb747a71__2024_09_06__14_10.py
alembic/versions_backup/: initial_migration__fba4a59078f0__2025_04_30__17_10.py
app/: app.py  middlewares.py
app/admin/: admin.py  auth.py
app/api/: __init__.py
app/cms/: auth.py  cms.py
app/common/: logger.py
app/config/: __init__.py  api.py  base.py  celery.py  common.py  db.py  email.py  es.py  grafana.py  hash.py  main.py  rmq.py
app/consumers/: base.py  es_write.py  history.py  sse.py
app/exceptions/: catcher.py  handlers.py
app/middlewares/: middlewares.py
app/publishers/: base.py
app/repositories/: __init__.py  base.py  booking.py  hotel.py  query_history.py  room.py  user.py
app/resources/: cache_.py  cache_redis.py  celery.py  celery_.py  db.py  hawk_.py  postgres.py  prometheus_.py  redis.py  redis_.py  rmq.py  sentry_.py  sse.py
app/services/: __init__.py  authorization.py  base.py  booking.py  cache.py  export.py  import_.py  password.py
app/tasks/: img.py
app/templates/: hotels.html
app/workers/: base.py
docker/: README.md  docker-compose-dev.yaml  docker-compose.yaml
docker/custom_node/: Dockerfile
docker/custom_python/: Dockerfile  api.sh  celery.sh  history.sh
docker/custom_rabbitmq/: Dockerfile
envs/: .gitignore  base.env
es/: README.md  constants.py  es_ideas.txt  tmp_3_dump.py  tmp_4_search.py
es/clients/: README.md  base.py  index.py  pydantic_.py
es/data_models/: products.py
es/dsl/: analysis.py  fields.py
es/indices/: products.yaml  reindex_history.yaml
es/main_query/: README.md  aggregation.py  (+2 more)
frontend/: README.md
linters/: .autoflake  .black  .flake8  .isort
migrations/: env.py
monitoring/: difficult-grafana-dashboard.json  prometheus.yml  simple-grafana-dashboard.json
scripts/: check_deduplication.py  create_index.py  create_rmq_bindings.py  process_time.py  reindex_smartly.py  rmq_reindex.py  tmp.sql
tests/: common.py  conftest.py  constants.py  test_confitest.py
utils/: es_speed.py  for_redis.sql  linters.py  process_time.py  tmp.sql
(+360 files in other folders)
