[tool.poetry]
name = "my-web-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.29.0"
greenlet = "^3.1.0"
sqlalchemy-filterset = "^2.3.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"
fastapi = "^0.113.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = "^2.0.36"
jinja2 = "^3.1.4"
redis = "^5.1.1"
flower = "^2.0.1"
pillow = "^11.0.0"
celery = "^5.4.0"
sqladmin = "^0.20.1"

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
