[tool.poetry]
name = "my-web-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.29.0"
greenlet = "^3.1.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic-settings = "^2.9.1"
pyjwt = "^2.9.0"
python-multipart = "^0.0.20"
fastapi = "^0.115.12"
pydantic = {extras = ["email"], version = "^2.11.4"}
sqlalchemy = "^2.0.36"
jinja2 = "^3.1.4"
redis = "^5.2.1"
flower = "^2.0.1"
pillow = "^11.0.0"
celery = "^5.4.0"
sqladmin = "^0.20.1"
itsdangerous = "^2.2.0"
python-json-logger = "^3.2.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.19.2"}
hawk-python-sdk = {extras = ["fastapi"], version = "^3.5.2"}
prometheus-fastapi-instrumentator = "^7.1.0"
orjson = "^3.10.18"
sse-starlette = "^2.3.6"
aio-pika = "^9.5.5"
asgi-lifespan = "^2.1.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = {extras = ["colors"], version = "^5.13.2"}
autoflake = "^2.3.1"
pyright = "^1.1.391"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-dotenv = "^0.5.2"
httpx = "^0.27.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
